@@ -86,10 +86,6 @@
 				<version>2.22.0</version>
 				<configuration>
 					<testSourceDirectory>${basedir}/src/main/test/</testSourceDirectory>
-<!-- 					<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
- -->					<argLine>
-						--illegal-access=permit
-					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -97,9 +93,6 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
 				</configuration>
 			</plugin>
 			<!-- // Maven Test Plugins -->
